--- a/products.html
+++ b/products.html
@@ -1,25 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="../css/main.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
-
     <head>
-        <title>Shopping Cart | Asg 5 | Amory Gao</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Order Online</title>
+        <link rel="stylesheet" href="css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="css/main.css"/>
+        <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
+        <script type="text/javascript" src="js/popper.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     </head>
 
     <body>
-        <div class="navbar">
-            <ul class="nav-links">
-                <li><a href="index.html">Return to Assignment 5</a></li>
-            </ul>
-        </div>
-        <div class="header">
-            <h1>Shopping Cart Application</h1>
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">La Luz</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="http://i6.cims.nyu.edu/~bs3995/professional_site.html">Home </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Help</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Sign In</a>
+                  </li>
+              </ul>
+            </div>
+        </nav>
         <div class="main">
             <h3>BLACKPINK - BORN PINK Tour</h3>
             <p>November 15, 2022</p>
@@ -73,8 +88,5 @@
             <script type="text/javascript" src="js/asg5cart.js"></script>
         </div>
     </body>
-
-    <footer>
-        <p>&copy; 2022 by Amory Gao.</p>
-    </footer>
+    
 </html>
