CURRENT I6 VERSION -amory

--- a/LaLuz.html
+++ b/LaLuz.html
@@ -25,10 +25,10 @@
                   <a class="nav-link" href="http://i6.cims.nyu.edu/~bs3995/LaLuz.html">Home </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Sign In</a>
+                  <a class="nav-link" href="signUp.html">Sign Up</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
+                    <a class="nav-link" href="login.html">Login</a>
                   </li>
               </ul>
             </div>
