--- a/signUp.html
+++ b/signUp.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <title>Sign Up page</title>
-    <link rel="stylesheet" href="signUpStyle.css" />
+    <link rel="stylesheet" href="css/signUpStyle.css" />
     <body>
       <div class="sign-up-form">
         <h1>Sign Up Now</h1>
-        <form>
+        <form action="php/signup.php" method="post">
           <input type="text" class="input-box" placeholder="Username" />
           <input type="number" class="input-box" placeholder="Phone number" />
           <input type="email" class="input-box" placeholder="Email Address" />
@@ -14,12 +14,12 @@
             <span>
               <input type="checkbox" />
             </span>
-            I agree to the terms of services
+            I agree to the Terms and Services
           </p>
-          <button type="button" class="btn">Sign Up</button>
+          <input type="submit" value="Sign Up" />
           <hr />
           <p class="or">OR</p>
-          <p>Do you have an account? <a href="#">Sign in</a></p>
+          <p>Do you have an account? <a href="login.html">Log in</a></p>
         </form>
       </div>
     </body>
