--- a/login.html
+++ b/login.html
@@ -7,25 +7,16 @@
     </head>
 
     <body>
-        <div class="header">
+        <div class="sign-up-form">
             <h1>Log In</h1>
-        </div>
-        <div class="main">
-            <div class="sign-up-form">
-                <h1>Log In</h1>
-                <form action="php/login.php" method="post">
-                    <input type="email" class="input-box" placeholder="Email" />
-                    <input type="password" class="input-box" placeholder="Password" />
-                    <input type="submit" value="Log In" />
-                    <hr />
-                    <p class="or">OR</p>
-                    <p>Need to make an account? <a href="signUp.html">Sign up</a></p>
-                </form>
-            </div>
+            <form action="php/login.php" method="post">
+                <input type="text" class="input-box" placeholder="Username" />
+                <input type="password" class="input-box" placeholder="Password" />
+                <input type="submit" value="Log In" />
+                <hr />
+                <p class="or">OR</p>
+                <p>Need an account? <a href="signUp.html">Sign up</a></p>
+            </form>
         </div>
     </body>
-
-    <footer>
-
-    </footer>
 </html>
