--- a/signUp.html
+++ b/signUp.html
@@ -1,27 +1,28 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Sign Up page</title>
     <link rel="stylesheet" href="css/signUpStyle.css" />
-    <body>
-      <div class="sign-up-form">
-        <h1>Sign Up Now</h1>
-        <form action="php/signup.php" method="post">
-          <input type="text" class="input-box" placeholder="Username" />
-          <input type="number" class="input-box" placeholder="Phone number" />
-          <input type="email" class="input-box" placeholder="Email Address" />
-          <input type="password" class="input-box" placeholder="Password" />
-          <p>
-            <span>
-              <input type="checkbox" />
-            </span>
-            I agree to the Terms and Services
-          </p>
-          <input type="submit" value="Sign Up" />
-          <hr />
-          <p class="or">OR</p>
-          <p>Do you have an account? <a href="login.html">Log in</a></p>
-        </form>
-      </div>
-    </body>
   </head>
+  <body>
+    <div class="sign-up-form">
+      <h1>Sign Up Now</h1>
+      <form action="php/signup.php" method="post">
+        <input type="text" class="input-box" placeholder="Username" />
+        <input type="number" class="input-box" placeholder="Phone number" />
+        <input type="email" class="input-box" placeholder="Email Address" />
+        <input type="password" class="input-box" placeholder="Password" />
+        <p>
+          <span>
+            <input type="checkbox" />
+          </span>
+          I agree to the Terms and Services
+        </p>
+        <input type="submit" value="Sign Up" />
+        <hr />
+        <p class="or">OR</p>
+        <p>Do you have an account? <a href="login.html">Log in</a></p>
+      </form>
+    </div>
+  </body>
 </html>
