added navbar to signup.css -amory

--- a/LaLuz.html
+++ b/LaLuz.html
@@ -15,14 +15,14 @@
     <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">La Luz</a>
+            <a class="navbar-brand" href="LaLuz.html">La Luz</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="http://i6.cims.nyu.edu/~bs3995/LaLuz.html">Home </a>
+                  <a class="nav-link" href="LaLuz.html">Home </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="signUp.html">Sign Up</a>
@@ -98,22 +98,17 @@
                 data-bs-toggle="tooltip"
                 data-bs-placement="bottom"
                 data-bs-custom-class="custom-tooltip"
-                href="#">Menu</a>
+                href="products.html">Order Online</a>
                 <a 
                 data-bs-toggle="tooltip"
                 data-bs-placement="bottom"
                 data-bs-custom-class="custom-tooltip"
-                href="#">Order Online</a>
+                href="contact.html">Contact Us</a>
                 <a 
                 data-bs-toggle="tooltip"
                 data-bs-placement="bottom"
                 data-bs-custom-class="custom-tooltip"
-                href="">Contact Us</a>
-                <a 
-                data-bs-toggle="tooltip"
-                data-bs-placement="bottom"
-                data-bs-custom-class="custom-tooltip"
-                href="">Our Story</a>
+                href="about_us.html">Our Story</a>
             </div>
           </div>
         
