--- a/login.html
+++ b/login.html
@@ -7,6 +7,15 @@
     </head>
 
     <body>
+        <div class="navbar">
+            <ul class="navbar-nav">
+              <li><a class="navbar-brand" href="LaLuz.html">La Luz</a></li>
+              <li><a class="nav-link" href="LaLuz.html">Home</a></li>
+              <li><a class="nav-link" href="signUp.html">Sign Up</a></li>
+              <li><a class="nav-link" href="login.html">Login</a></li>
+            </ul>
+        </div>
+
         <div class="sign-up-form">
             <h1>Log In</h1>
             <form action="php/login.php" method="post">
