--- a/signUp.html
+++ b/signUp.html
@@ -4,7 +4,17 @@
     <title>Sign Up page</title>
     <link rel="stylesheet" href="css/signUpStyle.css" />
   </head>
+
   <body>
+    <div class="navbar">
+      <ul class="navbar-nav">
+        <li><a class="navbar-brand" href="LaLuz.html">La Luz</a></li>
+        <li><a class="nav-link" href="LaLuz.html">Home</a></li>
+        <li><a class="nav-link" href="signUp.html">Sign Up</a></li>
+        <li><a class="nav-link" href="login.html">Login</a></li>
+      </ul>
+    </div>
+
     <div class="sign-up-form">
       <h1>Sign Up Now</h1>
       <form action="php/signup.php" method="post">
