--- a/signUp.html
+++ b/signUp.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8" />
     <title>Sign Up page</title>
     <link rel="stylesheet" href="css/signUpStyle.css" />
   </head>
@@ -8,8 +9,8 @@
   <body>
     <div class="navbar">
       <ul class="navbar-nav">
-        <li><a class="navbar-brand" href="LaLuz.html">La Luz</a></li>
-        <li><a class="nav-link" href="LaLuz.html">Home</a></li>
+        <li><a class="navbar-brand" href="index.html">La Luz</a></li>
+        <li><a class="nav-link" href="index.html">Home</a></li>
         <li><a class="nav-link" href="signUp.html">Sign Up</a></li>
         <li><a class="nav-link" href="login.html">Login</a></li>
       </ul>
