--- a/login.html
+++ b/login.html
@@ -9,8 +9,8 @@
     <body>
         <div class="navbar">
             <ul class="navbar-nav">
-              <li><a class="navbar-brand" href="LaLuz.html">La Luz</a></li>
-              <li><a class="nav-link" href="LaLuz.html">Home</a></li>
+              <li><a class="navbar-brand" href="index.html">La Luz</a></li>
+              <li><a class="nav-link" href="index.html">Home</a></li>
               <li><a class="nav-link" href="signUp.html">Sign Up</a></li>
               <li><a class="nav-link" href="login.html">Login</a></li>
             </ul>
@@ -19,8 +19,8 @@
         <div class="sign-up-form">
             <h1>Log In</h1>
             <form action="php/login.php" method="post">
-                <input type="text" class="input-box" placeholder="Username" />
-                <input type="password" class="input-box" placeholder="Password" />
+                <input type="text" class="input-box" name="username" placeholder="Username" />
+                <input type="password" class="input-box" name="password" placeholder="Password" />
                 <input type="submit" value="Log In" />
                 <hr />
                 <p class="or">OR</p>
