--- a/products.html
+++ b/products.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Order Online</title>
-        <link rel="stylesheet" href="css/bootstrap.min.css"/>
-        <link rel="stylesheet" href="css/main.css"/>
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+        <link rel="stylesheet" type="text/css" href="css/main.css"/>
         <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
         <script type="text/javascript" src="js/popper.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -14,28 +14,26 @@
 
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">La Luz</a>
+            <a class="navbar-brand" href="index.html">La Luz</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="http://i6.cims.nyu.edu/~bs3995/professional_site.html">Home </a>
+                  <a class="nav-link" href="index.html">Home </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Help</a>
+                  <a class="nav-link" href="signUp.html">Sign Up</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Sign In</a>
+                    <a class="nav-link" href="login.html">Login</a>
                   </li>
               </ul>
             </div>
         </nav>
-        <div class="main">
+        <div class="products">
+            <img class="bgimg" src="images/bg.jpg" />
             <h3>BLACKPINK - BORN PINK Tour</h3>
             <p>November 15, 2022</p>
             <p>Prudential Center</p>
@@ -86,7 +84,23 @@
                 </form>
             </div>
             <script type="text/javascript" src="js/asg5cart.js"></script>
+            <div class="menu">
+                <a 
+                data-bs-toggle="tooltip"
+                data-bs-placement="bottom"
+                data-bs-custom-class="custom-tooltip"
+                href="products.html">Order Online</a>
+                <a \
+                data-bs-toggle="tooltip"
+                data-bs-placement="bottom"
+                data-bs-custom-class="custom-tooltip"
+                href="contact.html">Contact Us</a>
+                <a 
+                data-bs-toggle="tooltip"
+                data-bs-placement="bottom"
+                data-bs-custom-class="custom-tooltip"
+                href="about_us.html">Our Story</a>
+            </div>
         </div>
     </body>
-    
 </html>
