--- a/signUp.html
+++ b/signUp.html
@@ -18,11 +18,11 @@
 
     <div class="sign-up-form">
       <h1>Sign Up Now</h1>
-      <form action="php/signup.php" method="post">
-        <input type="text" class="input-box" placeholder="Username" />
-        <input type="number" class="input-box" placeholder="Phone number" />
-        <input type="email" class="input-box" placeholder="Email Address" />
-        <input type="password" class="input-box" placeholder="Password" />
+      <form action="signUp.php" method="post">
+        <input type="text" class="input-box" name="username" placeholder="Username" />
+        <input type="number" class="input-box" name="phoneNum" placeholder="Phone number" />
+        <input type="email" class="input-box" name="email" placeholder="Email Address" />
+        <input type="password" class="input-box" name="password" placeholder="Password" />
         <p>
           <span>
             <input type="checkbox" />
