--- a/signUp.html
+++ b/signUp.html
@@ -18,7 +18,7 @@
 
     <div class="sign-up-form">
       <h1>Sign Up Now</h1>
-      <form action="signUp.php" method="post">
+      <form action="php/signUp.php" method="post">
         <input type="text" class="input-box" name="username" placeholder="Username" />
         <input type="number" class="input-box" name="phoneNum" placeholder="Phone number" />
         <input type="email" class="input-box" name="email" placeholder="Email Address" />
