--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="login.html">Login</a>
-                  </li>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="search.html">Search</a>
+                </li>
               </ul>
             </div>
         </nav>
