--- a/login.html
+++ b/login.html
@@ -13,6 +13,7 @@
               <li><a class="nav-link" href="index.html">Home</a></li>
               <li><a class="nav-link" href="signUp.html">Sign Up</a></li>
               <li><a class="nav-link" href="login.html">Login</a></li>
+              <li><a class="nav-link" href="search.html">Search</a></li>
             </ul>
         </div>
 
