--- a/search.html
+++ b/search.html
@@ -1,32 +1,101 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8" />
-    <title>Search page</title>
-    <link rel="stylesheet" href="signUpStyle.css" />
+    <title>La Luz</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="js/popper.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
   </head>
-
   <body>
-    <div class="navbar">
-      <ul class="navbar-nav">
-        <li><a class="navbar-brand" href="index.html">La Luz</a></li>
-        <li><a class="nav-link" href="index.html">Home</a></li>
-        <li><a class="nav-link" href="signUp.html">Sign Up</a></li>
-        <li><a class="nav-link" href="login.html">Login</a></li>
-      </ul>
-    </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="index.html">La Luz</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="signUp.html">Sign Up</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="login.html">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="search.html">Search</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-    <div class="sign-up-form">
-      <p>Search</p>
-      <form id="form" role="search">
-        <input
-          type="search"
-          class="input-box"
-          placeholder="Search..."
-          aria-label="Search through site content"
-        />
-        <button class="btn">Search</button>
-      </form>
+    <div class="container">
+      <video
+        style="
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          position: absolute;
+          top: 0;
+          left: 0;
+        "
+        autoplay="autoplay"
+        loop="loop"
+        muted="muted"
+        id="video"
+      >
+        <source src="images/chocolate.mp4" type="video/mp4" />
+      </video>
+
+      <div class="content">
+        <div class="title">LaLuz</div>
+        <div class="desc">Master Belgian chocolatier since 1983</div>
+
+        <div class="menu">
+          <a
+            data-bs-toggle="tooltip"
+            data-bs-placement="bottom"
+            data-bs-custom-class="custom-tooltip"
+            href="products.html"
+            >Order Online</a
+          >
+          <a
+            data-bs-toggle="tooltip"
+            data-bs-placement="bottom"
+            data-bs-custom-class="custom-tooltip"
+            href="contact.html"
+            >Contact Us</a
+          >
+          <a
+            data-bs-toggle="tooltip"
+            data-bs-placement="bottom"
+            data-bs-custom-class="custom-tooltip"
+            href="about_us.html"
+            >Our Story</a
+          >
+        </div>
+
+        <div class="sign-up-form">
+          <form action="php/search.php" method="get" class="search">
+            <input type="search" name="productName"><br>
+            <input type="submit" value="Search">
+            <input type="reset">
+          </form>
+        </div>
+      </div>
     </div>
   </body>
 </html>
