--- a/about_us.html
+++ b/about_us.html
@@ -45,7 +45,7 @@
             <div class="story">
                 <p style="font-size: 2vh;" id="story">Since 1983</p>
                 <br>
-                <p>Founded in 1983, La Luz is an American brand which has its headquarters sitting in the heart of New York. The chocolatier Eureka Sun succeeded her experiment in Belgium and led her team back to the city, creating the store and naming it after her personal hopes. "La Luz" means "the light" in Belgian; it means wherever there's light, there will be happiness (referring back to Ms.Sun's own name).</p>
+                <p>Founded in 1983, La Luz is an American brand which has its headquarters sitting in the heart of New York. The chocolatier succeeded their experiment in Belgium and led their team back to the city, creating the store and naming it after her personal hopes. "La Luz" means "the light" in Belgian; it means wherever there's light, there will be happiness.</p>
                 <p>Ever since La Luz entered the American market in 1990, it has been one of the top tier chocolate shops. La Luz has over 200 store in different states in the country, and had more than 1,000 retail stores in luxury department stores and unique gift shops.</p>
                 <p>From New York to Paris, from Paris to Tokyo, La Luz brought the best chocolate to the world.</p>
             </div>
