--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </head>
-    <body>
+    <body class="contact_container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html">La Luz</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,11 +32,8 @@
         </div>
       </nav>
 
-
-        <div class="aboutus_container">
-            
-          <img class="bgimg" src="images/bg.jpg" alt="">
-          <h1 class="ourstory" style="font-size: 60px"
+      <div>
+        <h1 class="contact_title" style="font-size: 60px"
               data-bs-toggle="tooltip"
               data-bs-placement="bottom"
               data-bs-custom-class="custom-tooltip"
@@ -87,25 +84,7 @@
                 </fieldset>
               </form>
             </div>
-          <footer id="about_us_navs">
-              <button type="button" class="btn btn-outline-light disabled">
-                  <a href="">More Information</a> 
-              </button>
-              <button type="button" class="btn btn-outline-light">
-                  <a href="">Join Us</a> 
-              </button>
-              <button 
-              type="button" 
-              class="btn btn-outline-light" 
-              id="link3"
-              data-bs-toggle="tooltip"
-              data-bs-placement="bottom"
-              data-bs-custom-class="custom-tooltip"
-              title="DONT CLICK!!!!"
-              >
-                  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Factory Tour (click me)</a>
-              </button>
-          </footer> 
       </div>
+      
     </body>
 </html>
