--- a/products.html
+++ b/products.html
@@ -42,16 +42,16 @@
             </h1>
 
             <div class="products">
-                <h3>Chocolate Chips (2 lbs)</h3>
-                <p>Description 1</p>
-                <img src="images/chips.jpg" width="200px" class="product-imgs" />
+                <h3>Truffle</h3>
+                <p>6 count/bag</p>
+                <img src="images/truffle.jpg" width="200px" class="product-imgs" />
                 <p>Quantity <input type="number" id="product1" min="0">
                     Price <input type="number" id="product1-price" readonly value=10>
                     Subtotal <input type="number" readonly id="product1-total"></p>
     
-                <h3>Chocolate Bars (Pack of 5)</h3>
-                <p>Description 2</p>
-                <img src="images/bar.webp" width="200px" class="product-imgs" />
+                <h3>Nama</h3>
+                <p>18 count/box</p>
+                <img src="images/nama.jpg" width="200px" class="product-imgs" />
                 <p>Quantity <input type="number" id="product2" min="0">
                 Price <input type="number" id="product2-price" readonly value=15>
                 Subtotal <input type="number" readonly id="product2-total"></p>
