--- a/about_us.html
+++ b/about_us.html
@@ -27,6 +27,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="login.html">Login</a>
               </li>
+            <li class="nav-item">
+                <a class="nav-link" href="search.html">Search</a>
+              </li>
           </ul>
         </div>
       </nav>
